--- a/src/color-schemes/contrast.scss
+++ b/src/color-schemes/contrast.scss
@@ -1,7 +1,5 @@
 body.is-mobile.theme-dark {
   --system-status-background: black;
-  --settings-background: black;
-  --modal-sidebar-background: black;
   --mobile-sidebar-background: black;
   --tab-background-active: black;
 
